<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ADR</string>
    <string name="Home">Principal</string>
    <string name="Web">Web</string>
    <string name="Help">Ayuda</string>
    <string name="Settings">Configuración</string>
    <string name="Escenas">Escenas</string>
    <string name="Eventos">Eventos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_fragment__tab_swipper">Fragment_TabSwipper</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_frag__principal">Frag_Principal</string>
    <string name="T1">Bienvenido a AndoBerry. Por favor, siga los pasos que se encuentran a continuacion para configurar adecuadamente la aplicación.</string>
    <string name="T2">Entre en esta pagina web para configurar la raswpberry: </string>
    <string name="T3">Y una vez haya finalizado presione el botón de continuar.</string>
    <string name="WebLink">ADR-WEB</string>
    <string name="title_activity_primera_pantalla">PrimeraPantalla</string>
    <string name="tutorial">TUTORIAL</string>
    <string name="continuar">Continuar</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="title_activity_login">ADR</string>
    <string name="title_activity_primera_configuracion">Primera Configuracion</string>
    <string name="title_activity_sign_in">Sign In</string>
    <string name="conectar_raspberry">Conectar Raspberry</string>
    <string name="ip_raspberry_">"IP Raspberry: "</string>
    <string name="conectar">Conectar</string>
    <string name="sign_in">Sign In</string>
    <string name="usuario_">"Usuario: "</string>
    <string name="contrase_a_">"Contraseña "</string>
    <string name="entrar">Entrar</string>
    <string name="presione_el_bot_n_m_s_abajo_para_continuar">Presione el botón más abajo para continuar</string>

</resources>
